[package]
name = "qxad"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.13"        
inkwell = { version = "0.2.0", features = ["llvm16-0"] }      
thiserror = "1.0"    
anyhow = "1.0"        
clap = { version = "4.0", features = ["derive"] } 

[lib]
name = "qxad"
path = "src/lib.rs"


[build-dependencies]
# lalrpop = "0.19"